Rust toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <ul class="list-group">
         <li class="list-group-item">ARK: Survival Evolved</li>
-        
+        <li class="list-group-item">Rust</li>
         
       </ul>
     <!-- Optional JavaScript -->
