CSGO toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <ul class="list-group">
         <li class="list-group-item">ARK: Survival Evolved</li>
         <li class="list-group-item">Rust</li>
-        
+        <li class="list-group-item">CSGO</li>
+
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
