Minecraft toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li class="list-group-item">ARK: Survival Evolved</li>
         <li class="list-group-item">Rust</li>
         <li class="list-group-item">CSGO</li>
+        <li class="list-group-item">Minecraft</li>
 
       </ul>
     <!-- Optional JavaScript -->
