--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li class="list-group-item">Rust</li>
         <li class="list-group-item">CSGO</li>
         <li class="list-group-item">Minecraft</li>
-
+        <li class="list-group-item">Terraria</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
