Fortnite toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li class="list-group-item">CSGO</li>
         <li class="list-group-item">Minecraft</li>
         <li class="list-group-item">Terraria</li>
+        <li class="list-group-item">Fortnite</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
