Conan Exiles toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li class="list-group-item">Minecraft</li>
         <li class="list-group-item">Terraria</li>
         <li class="list-group-item">Fortnite</li>
+        <li class="list-group-item">Conan Exiles</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
