R6 Siege toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li class="list-group-item">Terraria</li>
         <li class="list-group-item">Fortnite</li>
         <li class="list-group-item">Conan Exiles</li>
+        <li class="list-group-item">R6 Siege</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
