Crawl toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li class="list-group-item">Fortnite</li>
         <li class="list-group-item">Conan Exiles</li>
         <li class="list-group-item">R6 Siege</li>
+        <li class="list-group-item">Crawl</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
