Sacred toegevoegd aan lijst

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li class="list-group-item">Conan Exiles</li>
         <li class="list-group-item">R6 Siege</li>
         <li class="list-group-item">Crawl</li>
+        <li class="list-group-item">Sacred</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
