--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li class="list-group-item">R6 Siege</li>
         <li class="list-group-item">Crawl</li>
         <li class="list-group-item">Sacred</li>
+        <li class="list-group-item">Titan Quest</li>
       </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
